# KingdomFA

./: .env_example  .gitignore  README.md  config_logs.py  database.py  main.py  pyproject.toml  requirements.txt  routers.py
.github/workflows/: kingdom_ci.yml
action/: create_is_super_user.py  create_super_user.py  create_superuser.py
admin/: admin_panel.py  admin_view.py  general.py  religion.py  user.py
alembic/: env.py
alembic/versions/: 005368013bbc_added_abstract_and_general_models.py  02c07598d3c0_initial.py  079967f435d0_changed_weapon_masteries_model.py  09efd09e2208_initial_commit.py  114d7c2c5daf_added_absent_level_for_mastery_in_.py  14f3ce6b4420_create_domains_table.py  161dab0c6804_updated_character_models.py  177803f23de6_test_delete.py  18914faf0a1f_updated_character_models.py  1b26b5589447_added_character_stats_model.py  1ec35c2451e9_initial.py  204395aacd0e_added_unique_to_spell.py  24adcad1cdc7_added_name_to_description_models.py  274d924948ba_inittial_commit.py  28b8bc4a4ce9_initial.py  2a59c508f7de_added_currency_and_item_models.py  2d979223a904_updated_weapon_model.py  2ff76b974a05_initial_commit.py  3193f556fa92_create_domains_table.py  35a5d1021e43_initial.py  374c1933ab98_added_emailstr_in_user.py  3e9243edeb6f_changed_race_id_in_racemixin.py  42a7be2cbae1_initial.py  475938973b0e_changed_len_name_in_general_models.py  (+61 more)
api_v1/: dependencies.py  enum.py
auth/: helpers.py  jwt_auth.py  utils.py
core/: __init__.py  config.py
docker/: Dockerfile  docker-compose.yml  docker-compose_git.yml  entrypoint  start-asgi
nginx/: default.conf
(+279 files in other folders)
